--- a/vue/package.json
+++ b/vue/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
+    "vue-chartjs": "^5.3.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
