--- a/vue/package.json
+++ b/vue/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "chart.js": "^4.4.2",
     "pinia": "^2.1.7",
     "primevue": "^3.51.0",
